Fix performance and mobile view issue

--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SSA - Strategic Success Agency | Marketing Solutions</title>
-    <meta name="description" content="SSA - Strategic Success Agency provides innovative marketing solutions to help businesses grow, increase visibility, and connect with their audience." />
-    <meta name="author" content="Strategic Success Agency" />
+    <title>Strategy Stars Ads - Egyptian Marketing Agency | Digital Marketing, Branding, and Growth</title>
+    <meta name="description" content="Strategy Stars Ads is a leading Egyptian marketing agency based in Egypt, specializing in digital marketing, branding, advertising, and business growth for Egyptian and MENA region businesses." />
+    <meta name="author" content="Strategy Stars Ads" />
+    <meta name="keywords" content="Egyptian marketing agency, Egypt digital marketing, branding Egypt, advertising Egypt, social media Egypt, SEO Egypt, business growth Egypt, Strategy Stars Ads" />
 
-    <meta property="og:title" content="SSA - Strategic Success Agency | Marketing Solutions" />
-    <meta property="og:description" content="SSA - Strategic Success Agency provides innovative marketing solutions to help businesses grow, increase visibility, and connect with their audience." />
+    <meta property="og:title" content="Strategy Stars Ads - Egyptian Marketing Agency | Digital Marketing, Branding, and Growth" />
+    <meta property="og:description" content="Strategy Stars Ads is a leading Egyptian marketing agency based in Egypt, specializing in digital marketing, branding, advertising, and business growth for Egyptian and MENA region businesses." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/image.jpg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ssaagency" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
     <!-- Add custom fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preload" as="image" href="/image.jpg" />
+    <link rel="preload" as="font" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" crossorigin>
   </head>
 
   <body>
